--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.31.0
-langchain==0.1.0
-langchain-community==0.0.10
-langchain-groq==0.0.1
-langchain-huggingface==0.0.1
-faiss-cpu==1.7.4
-pypdf==4.0.0
-sentence-transformers==2.3.1
-groq==0.4.2
-python-dotenv==1.0.1
+streamlit
+langchain
+langchain-community
+langchain-groq
+langchain-huggingface
+faiss-cpu
+pypdf
+sentence-transformers
+groq
+python-dotenv
